// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`airtable_error new AirtableError(error, message, statusCode) case: 1 1`] = `
AirtableError {
  "error": "my-error",
  "message": "some message",
  "statusCode": 500,
}
`;

exports[`airtable_error new AirtableError(error, message, statusCode) case: 1 2`] = `"some message(my-error)[Http code 500]"`;

exports[`airtable_error new AirtableError(error, message, statusCode) case: 2 1`] = `
AirtableError {
  "error": "my-error",
  "message": "some message",
  "statusCode": undefined,
}
`;

exports[`airtable_error new AirtableError(error, message, statusCode) case: 2 2`] = `"some message(my-error)"`;
